# ray-mcp

./: .coveragerc  .flake8  .gitignore  CLAUDE.md  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  REFACTORING_SUMMARY.md  cleanup_repo.sh  pyproject.toml  pytest.ini  ray-mcp-critical-bugs.md  requirements.txt  setup.py  test_runner.py  validate_refactoring.py
.codex/: setup.sh
.github/workflows/: ci.yml  codex.yml  update-dependencies.yml
config/: README.md
docs/: CONFIGURATION.md  DEPENDENCY_MANAGEMENT.md  DEVELOPMENT.md  EXAMPLES.md  TESTING_GUIDE.md  TOOLS.md  TROUBLESHOOTING.md
docs/config/: README.md  claude_desktop_config.json  mcp_server_config.json
examples/: actor_example.py  connect_existing_cluster.py  data_pipeline.py  distributed_training.py  enhanced_runtime_env_examples.py  log_retrieval_example.py  multi_node_cluster.py  simple_job.py  streaming_logs_example.py  workflow_orchestration.py
ray_mcp/: __init__.py  config.py  core_utils.py  handlers.py  llm_parser.py  logging_utils.py  main.py  parsers.py  ray_manager.py  tool_functions.py  tool_registry.py  tools.py  types.py  worker_manager.py
ray_mcp/cloud/: __init__.py  cloud_provider_manager.py  eks_manager.py  gke_manager.py
ray_mcp/cloud/config/: __init__.py  cloud_provider_config.py  cloud_provider_detector.py
ray_mcp/cloud/providers/: __init__.py  cloud_provider_manager.py  gke_manager.py
ray_mcp/config/: __init__.py  unified_config.py
ray_mcp/core/: __init__.py  cloud_provider_config.py  cloud_provider_detector.py  cloud_provider_manager.py  cluster_manager.py  crd_operations.py  gke_manager.py  interfaces.py  job_manager.py  kuberay_cluster_manager.py  kuberay_job_manager.py  kubernetes_client.py  kubernetes_config.py  kubernetes_manager.py  log_manager.py  port_manager.py  ray_cluster_crd.py  ray_job_crd.py  state_manager.py  unified_manager.py
ray_mcp/core/cloud/config/: __init__.py  cloud_provider_config.py
ray_mcp/core/cloud/providers/: __init__.py  cloud_provider_manager.py  gke_manager.py
ray_mcp/core/foundation/: __init__.py  base_managers.py  interfaces.py
ray_mcp/core/kubernetes/crds/: __init__.py  ray_cluster_crd.py  ray_job_crd.py
ray_mcp/core/kubernetes/managers/: kuberay_cluster_manager.py  kuberay_job_manager.py  kubernetes_manager.py
ray_mcp/core/managers/: cluster_manager.py  job_manager.py  log_manager.py  worker_manager.py
ray_mcp/foundation/: __init__.py  base_execute_mixin.py  base_managers.py  dashboard_client.py  enums.py  import_utils.py  interfaces.py  job_type_detector.py  log_processor_strategy.py  logging_utils.py  name_utils.py  resource_manager.py  test_mocks.py  validation_mixin.py
ray_mcp/kuberay/: __init__.py  job_manager.py  manifest_generator.py  service_manager.py
ray_mcp/kubernetes/: __init__.py  kuberay_cluster_manager.py  kuberay_job_manager.py  kuberay_service_manager.py  kubernetes_manager.py  manifest_generator.py  validation_models.py  validation_pipeline.py  validators.py
ray_mcp/kubernetes/config/: __init__.py  kubernetes_client.py  kubernetes_config.py
ray_mcp/kubernetes/crds/: __init__.py  base_crd_manager.py  crd_operations.py  ray_cluster_crd.py  ray_job_crd.py
ray_mcp/kubernetes/managers/: __init__.py  kuberay_cluster_manager.py  kuberay_job_manager.py  kubernetes_manager.py
ray_mcp/managers/: __init__.py  cluster_manager.py  job_manager.py  log_manager.py  port_manager.py  state_manager.py  unified_manager.py
ray_mcp/tools/: __init__.py  cloud_tools.py  cluster_tools.py  job_tools.py  schema_registry.py  schema_utils.py
ray_mcp/tools/schemas/: __init__.py  cloud_tools.py  cluster_tools.py  job_tools.py  log_tools.py
scripts/: lint_tool_functions.py  ray_cleanup.sh  setup_claude_desktop.py  smart-test.sh  test-e2e.sh  test-fast.sh  test-full.sh  test-smoke.sh  update_dependencies.py
tests/: README.md  conftest.py  test_base_managers.py  test_core_cluster_manager.py  test_core_functionality.py  test_core_job_manager.py  test_core_log_manager.py  test_core_port_manager.py  test_core_state_manager.py  test_core_unified_manager.py  test_e2e_integration.py  test_e2e_smoke.py  test_e2e_system.py  test_exception_handling.py  test_full_parameter_flow.py  test_integration.py  test_kuberay_manager.py  test_kubernetes.py  test_kubernetes_manager.py  test_main.py  test_managers.py  test_mcp_integration.py  test_mcp_server.py  test_mcp_tools.py  test_multi_node_cluster.py  test_prompt_parsing.py  test_ray_manager.py  test_ray_manager_methods.py  test_state_management.py  test_streaming_logs.py  test_tool_extensions.py  test_tool_functions.py  test_tools.py  test_utils.py  test_worker_manager.py
tests/e2e/: __init__.py  test_critical_workflows.py
tests/helpers/: __init__.py  e2e.py  fixtures.py  utils.py
tests/integration/: run_tests.sh  setup_testing_environment.py  test_eks_mode.py  test_gke_mode.py  test_local_mode.py  test_runner.py
tests/unit/: __init__.py  test_eks_manager.py  test_llm_parser.py  test_llm_parser_functionality.py  test_mcp_tools.py  test_parsers_and_formatters.py  test_prompt_managers.py  test_tool_registry.py  test_unified_config.py  test_validation_framework.py
