[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-mcp"
version = "0.1.0"
description = "MCP (Model Context Protocol) server for Ray distributed computing"
authors = [
    {name = "claude 4 sonnet", email = "ray-mcp@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "ray[default]>=2.30.0",
    "typing-extensions>=4.5.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
examples = ["numpy>=1.21.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/pradeepiyer/ray-mcp"
Documentation = "https://github.com/pradeepiyer/ray-mcp#readme"
Repository = "https://github.com/pradeepiyer/ray-mcp.git"
Issues = "https://github.com/pradeepiyer/ray-mcp/issues"

[project.scripts]
ray-mcp = "ray_mcp.main:run_server"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pyright]
# Restrict analysis to this repository only
include = [
    "ray_mcp",
    "tests",
    "examples",
    "setup.py"
]
exclude = [
    "**/.venv",
    "**/.pytest_cache",
    "**/node_modules",
    "**/__pycache__",
    "**/.git",
    "**/dist",
    "**/build",
    "**/*.egg-info"
]
# Only analyze files in this repo, not external dependencies
useLibraryCodeForTypes = true
# Python version compatibility
pythonVersion = "3.8"
# Strict type checking for this project
typeCheckingMode = "basic" 