[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ray-mcp"
version = "0.3.0"
description = "MCP (Model Context Protocol) server for Ray distributed computing"
authors = [
    {name = "claude 4 sonnet", email = "ray-mcp@example.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "ray[default]>=2.47.0",
    "typing-extensions>=4.5.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "tqdm>=4.64.0",
    "kubernetes>=26.1.0",
]

[project.optional-dependencies]
examples = [
    # No additional dependencies needed for examples
]

[project.urls]
Homepage = "https://github.com/pradeepiyer/ray-mcp"
Documentation = "https://github.com/pradeepiyer/ray-mcp#readme"
Repository = "https://github.com/pradeepiyer/ray-mcp.git"
Issues = "https://github.com/pradeepiyer/ray-mcp/issues"

[project.scripts]
ray-mcp = "ray_mcp.main:run_server"

# UV Configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "pyright>=1.1.0",
]

[tool.uv.sources]
# Add any local or git dependencies here if needed

# Coverage Configuration
[tool.coverage.run]
source = ["ray_mcp"]
data_file = ".coverage_data/.coverage"
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

# Development Tools Configuration
[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
combine_as_imports = true
force_sort_within_sections = true
known_third_party = ["mcp"]

[tool.pyright]
# Restrict analysis to this repository only
include = [
    "ray_mcp",
    "tests",
    "examples",
]
exclude = [
    "**/.venv",
    "**/.pytest_cache",
    "**/node_modules",
    "**/__pycache__",
    "**/.git",
    "**/dist",
    "**/build",
    "**/*.egg-info"
]
# Only analyze files in this repo, not external dependencies
useLibraryCodeForTypes = true
# Python version compatibility
pythonVersion = "3.10"
# Strict type checking for this project
typeCheckingMode = "basic" 
