[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ray-mcp"
version = "0.4.0"
description = "MCP (Model Context Protocol) server for Ray distributed computing"
authors = [
    {name = "ray-mcp authors", email = "ray-mcp@example.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "ray[default]>=2.47.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "kubernetes>=26.1.0,<30.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "openai>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
gke = [
    "google-cloud-container>=2.17.0,<3.0.0",
    "google-auth>=2.16.0,<3.0.0",
]
eks = [
    "boto3>=1.26.0,<2.0.0",
    "botocore>=1.29.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/pradeepiyer/ray-mcp"
Documentation = "https://github.com/pradeepiyer/ray-mcp#readme"
Repository = "https://github.com/pradeepiyer/ray-mcp.git"
Issues = "https://github.com/pradeepiyer/ray-mcp/issues"

[project.scripts]
ray-mcp = "ray_mcp.main:run_server"

# UV Configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=24.0.0,<25.0.0",
    "isort>=5.12.0,<6.0.0",
    "pyright>=1.1.0,<2.0.0",
]

# Coverage Configuration
[tool.coverage.run]
source = ["ray_mcp"]
data_file = ".coverage_data/.coverage"
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

# Development Tools Configuration
[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
combine_as_imports = true
force_sort_within_sections = true
known_third_party = ["mcp"]

[tool.pyright]
# Restrict analysis to this repository only
include = [
    "ray_mcp",
    "tests",
    "examples",
]
exclude = [
    "**/.venv",
    "**/.pytest_cache",
    "**/node_modules",
    "**/__pycache__",
    "**/.git",
    "**/dist",
    "**/build",
    "**/*.egg-info"
]
# Only analyze files in this repo, not external dependencies
useLibraryCodeForTypes = true
# Python version compatibility
pythonVersion = "3.10"
# Standard type checking with import validation
typeCheckingMode = "standard"
# Enable critical import checks to match CI
reportMissingImports = true
# Keep other checks at reasonable levels
reportOptionalMemberAccess = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportUnknownArgumentType = false
reportPossiblyUnboundVariable = false
